post entry backgrounds

--- a/_assets/sass/config/config.scss
+++ b/_assets/sass/config/config.scss
@@ -5,6 +5,7 @@ $background-secondary: black;
 $background-pagination: yellow;
 $background-blog-entry: #ffff57;
 $background-code-snippet: none;
+$background-post-entry: #f5c7a6;
 
 $font-main: "Quicksand";
 
