add category class - post entries

--- a/_assets/sass/main.scss
+++ b/_assets/sass/main.scss
@@ -203,6 +203,7 @@ body {
             
         }
         
+        .category-entry,
         .archive-entry {
             
             @extend %post_entries;
