--- a/_assets/sass/main.scss
+++ b/_assets/sass/main.scss
@@ -209,6 +209,43 @@ body {
             @extend %post_entries;
         }
         
+        .post_authors {
+            
+            li {
+                
+                list-style: none;
+            }
+            
+        }
+        
+        .blog_posts_archive {
+            
+            li {
+                
+                list-style: none;
+            }
+            
+        }
+        
+        .blog_posts_archive,
+        .post_authors {
+            
+            display: block;
+            margin: 20px auto;
+            width: 50%;
+            
+            h4 {
+                
+                text-align: center;
+                margin-bottom: 10px;
+                /* border-bottom: solid red 3px; */
+                text-decoration: underline
+            }
+            
+        }
+        
+        
+        
     }
     
     .section_archive {
