extend post formatting styles

--- a/_assets/sass/config/config.scss
+++ b/_assets/sass/config/config.scss
@@ -6,6 +6,7 @@ $background-pagination: yellow;
 $background-blog-entry: #ffff57;
 $background-code-snippet: none;
 $background-post-entry: #f5c7a6;
+$background-page: #f5c7a6;
 $background-single: #f5c7a6;
 
 $font-main: "Quicksand";
