--- a/_assets/sass/single.scss
+++ b/_assets/sass/single.scss
@@ -66,6 +66,40 @@
             
             @extend %post_formatting;
             
+            figure {
+
+                img {
+
+                    display: block;
+                    width: 60%;
+                    margin: 10px auto;
+                    border: solid 3px black;
+                    border-radius: 5px;
+                    
+                    @media (max-width: $breakpoint-sm) {
+                        
+                        width: 90%;
+                    }
+                    
+                    
+                }
+
+                &.alignleft,
+                &.aligncenter,
+                &.alignright {
+
+                }
+            }
+            
+        }
+        
+        .author_details {
+            
+            display: block;
+            margin: 0 auto;
+            text-align: center;
+            font-size: 15px;
+            font-weight: bold;
         }
             
             
